Jupyter-notebooks and User Manual: Use consistent notation for the linear and bilinear forms in ceed/ex2 math formulation

--- a/examples/tutorials/tutorial1-ceed.ipynb
+++ b/examples/tutorials/tutorial1-ceed.ipynb
@@ -232,7 +232,7 @@
     "   \\nabla \\cdot \\nabla u = 0, \\textrm{ for  } \\mathbf{x} \\in \\Omega.\n",
     "$$\n",
     "\n",
-    "We can rewrite this via the bilinear form\n",
+    "We can rewrite this via the bilinear form $a(\\cdot,\\cdot)$ and the linear form $\\langle \\cdot, \\cdot \\rangle$ as\n",
     "\n",
     "$$\n",
     "   a(u,v) = \\langle v, f \\rangle\n",
