doc: more writing on hyperelasticity and implementation tradeoffs

--- a/doc/sphinx/source/references.bib
+++ b/doc/sphinx/source/references.bib
@@ -64,3 +64,23 @@
  address={Chichester New York},
  isbn={978-0-471-82319-3}
 }
+@article{williams2009roofline,
+  title={Roofline: an insightful visual performance model for multicore architectures},
+  author={Williams, Samuel and Waterman, Andrew and Patterson, David},
+  journal={Communications of the ACM},
+  volume={52},
+  number={4},
+  pages={65--76},
+  year={2009},
+  publisher={ACM New York, NY, USA}
+}
+@article{arruda1993largestretch,
+  title={A three-dimensional constitutive model for the large stretch behavior of rubber elastic materials},
+  author={Arruda, Ellen M and Boyce, Mary C},
+  journal={Journal of the Mechanics and Physics of Solids},
+  volume={41},
+  number={2},
+  pages={389--412},
+  year={1993},
+  publisher={Elsevier}
+}
