Jupyter-notebooks: Add sketch image for QFunctions tutorial

--- a/examples/tutorials/tutorial6-python-qfunction.ipynb
+++ b/examples/tutorials/tutorial6-python-qfunction.ipynb
@@ -99,7 +99,11 @@
    "source": [
     "## CeedQFunction\n",
     "\n",
-    "Here we show some basic examples to illustrate the `CeedQFunction` class. In libCEED, QFunctions represent the spatial terms of the point-wise functions describing the physics at the quadrature points (see [the API documentation](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#api-description))."
+    "Here we show some basic examples to illustrate the `CeedQFunction` class. In libCEED, QFunctions represent the spatial terms of the point-wise functions describing the physics at the quadrature points (see [the API documentation](https://libceed.readthedocs.io/en/latest/libCEEDapi.html#api-description)). As shown in the following sketch, QFunctions (such as the one depicted, which defines the Laplacian) are point-wise functions defined at quadrature points. Hence, QFunctions are independent from element shape, resolution and order.\n",
+    "\n",
+    "![alt text][QFunctionSchematic]\n",
+    "\n",
+    "[QFunctionSchematic]: ./img/QFunctionSketch.svg \"Schematic of point-wise QFunctions, defined at quadrature points, belonging to elements that can have different shape, resolution and order.\""
    ]
   },
   {
