Jupyter-notebooks: tutorial2-python-vector - Fix bug and move print statement in setvalue cell

--- a/examples/tutorials/tutorial2-python-vector.ipynb
+++ b/examples/tutorials/tutorial2-python-vector.ipynb
@@ -58,28 +58,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can visualize the (unset) CeedVector by typing"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(x)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "The size of the `CeedVector` can also be specified as "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -114,22 +98,22 @@
     "\n",
     "a = np.arange(1, 4, dtype=\"float64\")\n",
     "x.set_array(a, cmode=libceed.USE_POINTER)\n",
-    "b = x.get_array_read()\n",
-    "x.restore_array_read()\n",
     "\n",
-    "print(b)"
+    "b = x.get_array_read()\n",
+    "print(b)\n",
+    "x.restore_array_read()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we set all entries in a `CeedVector` to the same value"
+    "* In the following example, we set all entries to the same value and then visualize the `CeedVector`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
