--- a/doc/sphinx/source/references.bib
+++ b/doc/sphinx/source/references.bib
@@ -41,3 +41,46 @@
   year={2010},
   doi={10.1007/s10915-008-9233-5}
 }
+
+@book{hughes2012finite,
+  title={The finite element method: linear static and dynamic finite element analysis},
+  author={Hughes, Thomas JR},
+  year={2012},
+  publisher={Courier Corporation}
+}
+
+@book{belytschko2013nonlinear,
+  title={Nonlinear finite elements for continua and structures},
+  author={Belytschko, Ted and Liu, Wing Kam and Moran, Brian and Elkhodary, Khalil},
+  year={2013},
+  publisher={John wiley \& sons}
+}
+
+@Book{holzapfel2000nonlinear,
+ author={Holzapfel, Gerhard},
+ title={Nonlinear solid mechanics: a continuum approach for engineering},
+ publisher={Wiley},
+ year={2000},
+ address={Chichester New York},
+ isbn={978-0-471-82319-3}
+}
+@article{williams2009roofline,
+  title={Roofline: an insightful visual performance model for multicore architectures},
+  author={Williams, Samuel and Waterman, Andrew and Patterson, David},
+  journal={Communications of the ACM},
+  volume={52},
+  number={4},
+  pages={65--76},
+  year={2009},
+  publisher={ACM New York, NY, USA}
+}
+@article{arruda1993largestretch,
+  title={A three-dimensional constitutive model for the large stretch behavior of rubber elastic materials},
+  author={Arruda, Ellen M and Boyce, Mary C},
+  journal={Journal of the Mechanics and Physics of Solids},
+  volume={41},
+  number={2},
+  pages={389--412},
+  year={1993},
+  publisher={Elsevier}
+}
