python: contextmanager for v.array() and v.array_read()

--- a/examples/tutorials/tutorial2-python-vector.ipynb
+++ b/examples/tutorials/tutorial2-python-vector.ipynb
@@ -99,9 +99,8 @@
     "a = np.arange(1, 4, dtype=\"float64\")\n",
     "x.set_array(a, cmode=libceed.USE_POINTER)\n",
     "\n",
-    "b = x.get_array_read()\n",
-    "print(b)\n",
-    "x.restore_array_read()"
+    "with x.array_read() as b:\n",
+    "  print(b)\n"
    ]
   },
   {
@@ -169,13 +168,11 @@
     "a = np.arange(1, 1 + n, dtype=\"float64\")\n",
     "x.set_array(a, cmode=libceed.USE_POINTER)\n",
     "\n",
-    "x_array = x.get_array()\n",
-    "y.set_array(x_array, cmode=libceed.USE_POINTER)\n",
-    "x.restore_array()\n",
+    "with x.array() as x_array:\n",
+    "  y.set_array(x_array, cmode=libceed.USE_POINTER)\n",
     "\n",
-    "y_array = y.get_array_read()\n",
-    "print(y_array)\n",
-    "y.restore_array_read()"
+    "with y.array_read() as y_array:\n",
+    "  print(y_array)\n"
    ]
   },
   {
@@ -208,9 +205,8 @@
     "a = np.zeros(n, dtype=\"float64\")\n",
     "x.set_array(a, cmode=libceed.USE_POINTER)\n",
     "\n",
-    "b = x.get_array()\n",
-    "b[3] = -3.14;\n",
-    "x.restore_array()\n",
+    "with x.array() as b:\n",
+    "  b[3] = -3.14;\n",
     "a[3]"
    ]
   },
