--- a/examples/tutorials/tutorial3-python-elemrestriction.ipynb
+++ b/examples/tutorials/tutorial3-python-elemrestriction.ipynb
@@ -87,9 +87,8 @@
     "\n",
     "r.apply(x, y)\n",
     "\n",
-    "y_array = y.get_array_read()\n",
-    "print('y =', y_array)\n",
-    "y.restore_array_read()"
+    "with y.array_read() as y_array:\n",
+    "  print('y =', y_array)\n"
    ]
   },
   {
@@ -131,9 +130,8 @@
     "\n",
     "mult = r.get_multiplicity()\n",
     "\n",
-    "m_array = mult.get_array_read()\n",
-    "print('mult =', m_array)\n",
-    "mult.restore_array_read()"
+    "with mult.array_read() as m_array:\n",
+    "  print('mult =', m_array)\n"
    ]
   },
   {
@@ -182,9 +180,8 @@
     "\n",
     "r.apply(x, y)\n",
     "\n",
-    "y_array = y.get_array_read()\n",
-    "print('y =', y_array)\n",
-    "y.restore_array_read()"
+    "with y.array_read() as y_array:\n",
+    "  print('y =', y_array)\n"
    ]
   },
   {
@@ -299,16 +296,14 @@
     "\n",
     "r.apply(x, y)\n",
     "\n",
-    "y_array = y.get_array_read()\n",
-    "print('y =', y_array)\n",
-    "y.restore_array_read()\n",
+    "with y.array_read() as y_array:\n",
+    "  print('y =', y_array)\n",
     "\n",
     "x.set_value(0)\n",
     "r.T.apply(y, x)\n",
     "\n",
-    "x_array = x.get_array_read()\n",
-    "print('x =', x_array)\n",
-    "x.restore_array_read()"
+    "with x.array_read() as x_array:\n",
+    "  print('x =', x_array)"
    ]
   },
   {
@@ -380,16 +375,14 @@
     "\n",
     "r.apply_block(1, x, y)\n",
     "\n",
-    "y_array = y.get_array_read()\n",
-    "print('y =', y_array)\n",
-    "y.restore_array_read()\n",
+    "with y.array_read() as y_array:\n",
+    "  print('y =', y_array)\n",
     "\n",
     "x.set_value(0)\n",
     "r.T.apply_block(1, y, x)\n",
     "\n",
-    "x_array = x.get_array_read()\n",
-    "print('x =', x_array)\n",
-    "x.restore_array_read()"
+    "with x.array_read() as array:\n",
+    "  print('x =', x_array)"
    ]
   },
   {
