--- a/examples/tutorials/tutorial4-python-basis.ipynb
+++ b/examples/tutorials/tutorial4-python-basis.ipynb
@@ -254,14 +254,13 @@
     "\n",
     "  bxl.apply(1, libceed.EVAL_INTERP, X, Xq)\n",
     "\n",
-    "  xq = Xq.get_array_read()\n",
-    "  for i in range(Qdim):\n",
-    "    xx = np.empty(dim, dtype=\"float64\")\n",
-    "    for d in range(dim):\n",
-    "      xx[d] = xq[d*Qdim + i]\n",
-    "    uq[i] = eval(dim, xx)\n",
+    "  with Xq.array_read() as xq:\n",
+    "    for i in range(Qdim):\n",
+    "      xx = np.empty(dim, dtype=\"float64\")\n",
+    "      for d in range(dim):\n",
+    "        xx[d] = xq[d*Qdim + i]\n",
+    "      uq[i] = eval(dim, xx)\n",
     "\n",
-    "  Xq.restore_array_read()\n",
     "  Uq.set_array(uq, cmode=libceed.USE_POINTER)\n",
     "\n",
     "  # This operation is the identity because the quadrature is collocated\n",
@@ -273,14 +272,9 @@
     "  bxg.apply(1, libceed.EVAL_INTERP, X, Xq)\n",
     "  bug.apply(1, libceed.EVAL_INTERP, U, Uq)\n",
     "\n",
-    "  xq = Xq.get_array_read()\n",
-    "  u = Uq.get_array_read()\n",
-    "  \n",
-    "  print('xq =', xq)\n",
-    "  print('u =', u)\n",
-    "  \n",
-    "  Xq.restore_array_read()\n",
-    "  Uq.restore_array_read()"
+    "  with Xq.array_read() as xq, Uq.array_read() as u:\n",
+    "    print('xq =', xq)\n",
+    "    print('u =', u)\n"
    ]
   },
   {
@@ -335,14 +329,13 @@
     "  bxl = ceed.BasisTensorH1Lagrange(dim, dim, 2, P, libceed.GAUSS_LOBATTO)\n",
     "  bxl.apply(1, libceed.EVAL_INTERP, X, Xq)\n",
     "\n",
-    "  xq = Xq.get_array_read()\n",
-    "  for i in range(Pdim):\n",
-    "    xx = np.empty(dim, dtype=\"float64\")\n",
-    "    for d in range(dim):\n",
-    "      xx[d] = xq[d*Pdim + i]\n",
-    "    u[i] = eval(dim, xx)\n",
+    "  with Xq.array_read() as xq:\n",
+    "    for i in range(Pdim):\n",
+    "      xx = np.empty(dim, dtype=\"float64\")\n",
+    "      for d in range(dim):\n",
+    "        xx[d] = xq[d*Pdim + i]\n",
+    "      u[i] = eval(dim, xx)\n",
     "\n",
-    "  Xq.restore_array_read()\n",
     "  U.set_array(u, cmode=libceed.USE_POINTER)\n",
     "\n",
     "  # Calculate G u at quadrature points, G' * 1 at dofs\n",
@@ -351,16 +344,12 @@
     "  bug.T.apply(1, libceed.EVAL_GRAD, Ones, Gtposeones)\n",
     "\n",
     "  # Check if 1' * G * u = u' * (G' * 1)\n",
-    "  gtposeones = Gtposeones.get_array_read()\n",
-    "  uq = Uq.get_array_read()\n",
+    "  with Gtposeones.array_read() as gtposeones, Uq.array_read() as uq:\n",
+    "    for i in range(Pdim):\n",
+    "      sum1 += gtposeones[i]*u[i]\n",
+    "    for i in range(dim*Qdim):\n",
+    "      sum2 += uq[i]\n",
     "\n",
-    "  for i in range(Pdim):\n",
-    "    sum1 += gtposeones[i]*u[i]\n",
-    "  for i in range(dim*Qdim):\n",
-    "    sum2 += uq[i]\n",
-    "  Gtposeones.restore_array_read()\n",
-    "  Uq.restore_array_read()\n",
-    "    \n",
     "  # Check that (1' * G * u - u' * (G' * 1)) is numerically zero\n",
     "  print('1T * G * u - uT * (GT * 1) =', math.fabs(sum1 - sum2))"
    ]
