--- a/examples/tutorials/tutorial6-python-operator.ipynb
+++ b/examples/tutorials/tutorial6-python-operator.ipynb
@@ -157,9 +157,8 @@
     "op_mass.apply(u, v)\n",
     "\n",
     "# Check\n",
-    "v_array = v.get_array_read()\n",
-    "print('The length of the domain is l = %4.2f'%np.sum(v_array))\n",
-    "v.restore_array_read()"
+    "with v.array_read() as v_array:\n",
+    "  print('The length of the domain is l = %4.2f'%np.sum(v_array))"
    ]
   }
  ],
