tutorials: add basis figures and clear Python outputs

--- a/examples/tutorials/tutorial2-python-vector.ipynb
+++ b/examples/tutorials/tutorial2-python-vector.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,17 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1. 2. 3.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -100,7 +92,7 @@
     "x.set_array(a, cmode=libceed.USE_POINTER)\n",
     "\n",
     "with x.array_read() as b:\n",
-    "  print(b)\n"
+    "  print(b)"
    ]
   },
   {
@@ -112,23 +104,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CeedVector length 5\n",
-      "  10.000000\n",
-      "  10.000000\n",
-      "  10.000000\n",
-      "  10.000000\n",
-      "  10.000000\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ceed = libceed.Ceed()\n",
     "x = ceed.Vector(size=5)\n",
@@ -147,17 +125,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ceed = libceed.Ceed()\n",
     "n = 10\n",
@@ -184,20 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-3.14"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 10\n",
     "\n",
@@ -219,19 +178,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "45.0\n",
-      "16.881943016134134\n",
-      "9.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n = 10\n",
     "x = ceed.Vector(n)\n",
@@ -269,9 +218,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
