--- a/examples/tutorials/tutorial4-python-basis.ipynb
+++ b/examples/tutorials/tutorial4-python-basis.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,14 +47,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.style.use('ggplot')\n",
+    "\n",
     "def eval(dim, x):\n",
     "  result, center = 1, 0.1\n",
     "  for d in range(dim):\n",
-    "    result *= math.tanh(x[d] - center)\n",
+    "    result *= np.tanh(x[d] - center)\n",
     "    center += 0.1\n",
     "  return result\n",
     "\n",
@@ -69,83 +74,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we illustrate the creation and destruction of a H1Lagrange basis with two different quadrature rules (Gauss-Lobatto and Gauss, respectively) "
+    "## $H^1$ Lagrange bases in 1D\n",
+    "\n",
+    "The Lagrange interpolation nodes are at the Gauss-Lobatto points, so interpolation to Gauss-Lobatto quadrature points is the identity."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CeedBasis: dim=1 P=4 Q=4\n",
-      "      qref1d:\t -1.00000000\t -0.44721360\t  0.44721360\t  1.00000000\n",
-      "   qweight1d:\t  0.16666667\t  0.83333333\t  0.83333333\t  0.16666667\n",
-      "    interp1d[0]:\t  1.00000000\t  0.00000000\t  0.00000000\t  0.00000000\n",
-      "    interp1d[1]:\t  0.00000000\t  1.00000000\t  0.00000000\t  0.00000000\n",
-      "    interp1d[2]:\t  0.00000000\t  0.00000000\t  1.00000000\t  0.00000000\n",
-      "    interp1d[3]:\t  0.00000000\t  0.00000000\t  0.00000000\t  1.00000000\n",
-      "      grad1d[0]:\t -3.00000000\t  4.04508497\t -1.54508497\t  0.50000000\n",
-      "      grad1d[1]:\t -0.80901699\t  0.00000000\t  1.11803399\t -0.30901699\n",
-      "      grad1d[2]:\t  0.30901699\t -1.11803399\t  0.00000000\t  0.80901699\n",
-      "      grad1d[3]:\t -0.50000000\t  1.54508497\t -4.04508497\t  3.00000000\n",
-      "\n",
-      "CeedBasis: dim=1 P=4 Q=4\n",
-      "      qref1d:\t -0.86113631\t -0.33998104\t  0.33998104\t  0.86113631\n",
-      "   qweight1d:\t  0.34785485\t  0.65214515\t  0.65214515\t  0.34785485\n",
-      "    interp1d[0]:\t  0.62994317\t  0.47255875\t -0.14950343\t  0.04700152\n",
-      "    interp1d[1]:\t -0.07069480\t  0.97297619\t  0.13253993\t -0.03482132\n",
-      "    interp1d[2]:\t -0.03482132\t  0.13253993\t  0.97297619\t -0.07069480\n",
-      "    interp1d[3]:\t  0.04700152\t -0.14950343\t  0.47255875\t  0.62994317\n",
-      "      grad1d[0]:\t -2.34183742\t  2.78794489\t -0.63510411\t  0.18899664\n",
-      "      grad1d[1]:\t -0.51670214\t -0.48795249\t  1.33790510\t -0.33325047\n",
-      "      grad1d[2]:\t  0.33325047\t -1.33790510\t  0.48795249\t  0.51670214\n",
-      "      grad1d[3]:\t -0.18899664\t  0.63510411\t -2.78794489\t  2.34183742\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import libceed\n",
-    "import numpy as np\n",
     "\n",
     "ceed = libceed.Ceed()\n",
     "\n",
-    "b = ceed.BasisTensorH1Lagrange(1, 1, 4, 4, libceed.GAUSS_LOBATTO)\n",
-    "print(b)\n",
-    "del b\n",
-    "\n",
-    "b = ceed.BasisTensorH1Lagrange(1, 1, 4, 4, libceed.GAUSS)\n",
-    "print(b)\n",
-    "del b"
+    "b = ceed.BasisTensorH1Lagrange(\n",
+    "    dim=1,   # topological dimension\n",
+    "    ncomp=1, # number of components\n",
+    "    P=4,     # number of basis functions (nodes) per dimension\n",
+    "    Q=4,     # number of quadrature points per dimension\n",
+    "    qmode=libceed.GAUSS_LOBATTO)\n",
+    "print(b)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we illustrate how to get the number of nodes and number of quadrature points for a basis"
+    "Although a `Basis` is fully discrete, we can use the Lagrange construction to extend the basis to continuous functions by applying `EVAL_INTERP` to the identity.  This is the Vandermonde matrix of the continuous basis."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p = 64\n",
-      "q = 125\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "b = ceed.BasisTensorH1Lagrange( 3, 1, 4, 5, libceed.GAUSS_LOBATTO)\n",
+    "P = b.get_num_nodes()\n",
+    "nviz = 50\n",
+    "bviz = ceed.BasisTensorH1Lagrange(1, 1, P, nviz, libceed.GAUSS_LOBATTO)\n",
+    "\n",
+    "# Construct P \"elements\" with one node activated\n",
+    "I = ceed.Vector(P * P)\n",
+    "with I.array(P, P) as x:\n",
+    "    x[...] = np.eye(P)\n",
+    "\n",
+    "Bvander = ceed.Vector(P * nviz)\n",
+    "bviz.apply(4, libceed.EVAL_INTERP, I, Bvander)\n",
+    "\n",
+    "qviz, _weight = b.lobatto_quadrature(nviz)\n",
+    "with Bvander.array_read(nviz, P) as B:\n",
+    "    plt.plot(qviz, B)\n",
+    "\n",
+    "# Mark tho Lobatto nodes\n",
+    "qb, _weight = b.lobatto_quadrature(P)\n",
+    "plt.plot(qb, 0*qb, 'ok');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In contrast, the Gauss quadrature points are not collocated, and thus all basis functions are generally nonzero at every quadrature point."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = ceed.BasisTensorH1Lagrange(1, 1, 4, 4, libceed.GAUSS)\n",
+    "print(b)\n",
+    "\n",
+    "with Bvander.array_read(nviz, P) as B:\n",
+    "    plt.plot(qviz, B)\n",
+    "# Mark tho Gauss quadrature points\n",
+    "qb, _weight = b.gauss_quadrature(P)\n",
+    "plt.plot(qb, 0*qb, 'ok');"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Although the underlying functions are not an intrinsic property of a `Basis` in `libceed`, the sizes are.\n",
+    "Here, we create a 3D tensor product element with more quadrature points than Lagrange interpolation nodes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = ceed.BasisTensorH1Lagrange(3, 1, 4, 5, libceed.GAUSS_LOBATTO)\n",
     "\n",
     "p = libceed.Basis.get_num_nodes(b)\n",
     "print('p =', p)\n",
@@ -163,73 +187,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "xq = [-0.86113631 -0.33998104  0.33998104  0.86113631]\n",
-      "u = [-0.75605827 -0.40905546  0.23605296  0.64590748]\n",
-      "xq = [-0.86113631 -0.86113631 -0.86113631 -0.86113631 -0.33998104 -0.33998104\n",
-      " -0.33998104 -0.33998104  0.33998104  0.33998104  0.33998104  0.33998104\n",
-      "  0.86113631  0.86113631  0.86113631  0.86113631 -0.86113631 -0.33998104\n",
-      "  0.33998104  0.86113631 -0.86113631 -0.33998104  0.33998104  0.86113631\n",
-      " -0.86113631 -0.33998104  0.33998104  0.86113631 -0.86113631 -0.33998104\n",
-      "  0.33998104  0.86113631]\n",
-      "u = [ 0.60441447  0.3677972  -0.10759824 -0.43761257  0.32701056  0.19899188\n",
-      " -0.05821462 -0.23676457 -0.18870745 -0.11483191  0.03359382  0.13662934\n",
-      " -0.5163568  -0.31421251  0.09192215  0.37385641]\n",
-      "xq = [-0.86113631 -0.86113631 -0.86113631 -0.86113631 -0.86113631 -0.86113631\n",
-      " -0.86113631 -0.86113631 -0.86113631 -0.86113631 -0.86113631 -0.86113631\n",
-      " -0.86113631 -0.86113631 -0.86113631 -0.86113631 -0.33998104 -0.33998104\n",
-      " -0.33998104 -0.33998104 -0.33998104 -0.33998104 -0.33998104 -0.33998104\n",
-      " -0.33998104 -0.33998104 -0.33998104 -0.33998104 -0.33998104 -0.33998104\n",
-      " -0.33998104 -0.33998104  0.33998104  0.33998104  0.33998104  0.33998104\n",
-      "  0.33998104  0.33998104  0.33998104  0.33998104  0.33998104  0.33998104\n",
-      "  0.33998104  0.33998104  0.33998104  0.33998104  0.33998104  0.33998104\n",
-      "  0.86113631  0.86113631  0.86113631  0.86113631  0.86113631  0.86113631\n",
-      "  0.86113631  0.86113631  0.86113631  0.86113631  0.86113631  0.86113631\n",
-      "  0.86113631  0.86113631  0.86113631  0.86113631 -0.86113631 -0.86113631\n",
-      " -0.86113631 -0.86113631 -0.33998104 -0.33998104 -0.33998104 -0.33998104\n",
-      "  0.33998104  0.33998104  0.33998104  0.33998104  0.86113631  0.86113631\n",
-      "  0.86113631  0.86113631 -0.86113631 -0.86113631 -0.86113631 -0.86113631\n",
-      " -0.33998104 -0.33998104 -0.33998104 -0.33998104  0.33998104  0.33998104\n",
-      "  0.33998104  0.33998104  0.86113631  0.86113631  0.86113631  0.86113631\n",
-      " -0.86113631 -0.86113631 -0.86113631 -0.86113631 -0.33998104 -0.33998104\n",
-      " -0.33998104 -0.33998104  0.33998104  0.33998104  0.33998104  0.33998104\n",
-      "  0.86113631  0.86113631  0.86113631  0.86113631 -0.86113631 -0.86113631\n",
-      " -0.86113631 -0.86113631 -0.33998104 -0.33998104 -0.33998104 -0.33998104\n",
-      "  0.33998104  0.33998104  0.33998104  0.33998104  0.86113631  0.86113631\n",
-      "  0.86113631  0.86113631 -0.86113631 -0.33998104  0.33998104  0.86113631\n",
-      " -0.86113631 -0.33998104  0.33998104  0.86113631 -0.86113631 -0.33998104\n",
-      "  0.33998104  0.86113631 -0.86113631 -0.33998104  0.33998104  0.86113631\n",
-      " -0.86113631 -0.33998104  0.33998104  0.86113631 -0.86113631 -0.33998104\n",
-      "  0.33998104  0.86113631 -0.86113631 -0.33998104  0.33998104  0.86113631\n",
-      " -0.86113631 -0.33998104  0.33998104  0.86113631 -0.86113631 -0.33998104\n",
-      "  0.33998104  0.86113631 -0.86113631 -0.33998104  0.33998104  0.86113631\n",
-      " -0.86113631 -0.33998104  0.33998104  0.86113631 -0.86113631 -0.33998104\n",
-      "  0.33998104  0.86113631 -0.86113631 -0.33998104  0.33998104  0.86113631\n",
-      " -0.86113631 -0.33998104  0.33998104  0.86113631 -0.86113631 -0.33998104\n",
-      "  0.33998104  0.86113631 -0.86113631 -0.33998104  0.33998104  0.86113631]\n",
-      "u = [-0.5050729  -0.33673026  0.02751796  0.30461999 -0.30734605 -0.20490649\n",
-      "  0.01674518  0.1853668   0.08991339  0.05994493 -0.00489876 -0.05422864\n",
-      "  0.36568656  0.2438019  -0.01992375 -0.22055318 -0.2732631  -0.18218351\n",
-      "  0.01488823  0.16481067 -0.16628557 -0.11086198  0.00905976  0.10029029\n",
-      "  0.04864646  0.03243242 -0.00265041 -0.0293397   0.19784994  0.13190583\n",
-      " -0.01077949 -0.11932742  0.15769149  0.10513234 -0.00859153 -0.09510702\n",
-      "  0.09595814  0.06397494 -0.0052281  -0.05787435 -0.02807234 -0.01871572\n",
-      "  0.00152947  0.01693101 -0.11417294 -0.07611868  0.0062205   0.06886008\n",
-      "  0.43148838  0.28767174 -0.02350884 -0.26023963  0.26256853  0.17505349\n",
-      " -0.01430556 -0.15836055 -0.07681383 -0.0512115   0.00418506  0.04632802\n",
-      " -0.31240936 -0.20828219  0.01702104  0.18842059]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import math\n",
-    "\n",
     "for dim in range(1, 4):\n",
     "  Q = 4\n",
     "  Qdim = Q**dim\n",
@@ -273,8 +234,16 @@
     "  bug.apply(1, libceed.EVAL_INTERP, U, Uq)\n",
     "\n",
     "  with Xq.array_read() as xq, Uq.array_read() as u:\n",
-    "    print('xq =', xq)\n",
-    "    print('u =', u)\n"
+    "    #print('xq =', xq)\n",
+    "    #print('u =', u)\n",
+    "    if dim == 2:\n",
+    "        # Default ordering is contiguous in x direction, but\n",
+    "        # pyplot expects meshgrid convention, which is transposed.\n",
+    "        x, y = xq.reshape(2, Q, Q).transpose(0, 2, 1)\n",
+    "        plt.scatter(x, y, c=np.array(u).reshape(Q, Q))\n",
+    "        plt.xlim(-1, 1)\n",
+    "        plt.ylim(-1, 1)\n",
+    "        plt.colorbar(label='u')"
    ]
   },
   {
@@ -286,19 +255,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1T * G * u - uT * (GT * 1) = 1.7763568394002505e-15\n",
-      "1T * G * u - uT * (GT * 1) = 2.3092638912203256e-14\n",
-      "1T * G * u - uT * (GT * 1) = 9.947598300641403e-14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for dim in range (1, 4):\n",
     "  P, Q = 8, 10\n",
@@ -351,7 +310,7 @@
     "      sum2 += uq[i]\n",
     "\n",
     "  # Check that (1' * G * u - u' * (G' * 1)) is numerically zero\n",
-    "  print('1T * G * u - uT * (GT * 1) =', math.fabs(sum1 - sum2))"
+    "  print('1T * G * u - uT * (GT * 1) =', np.abs(sum1 - sum2))"
    ]
   },
   {
@@ -365,38 +324,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* In the following example, we demonstrate the QR factorization of a basis matrix"
+    "* In the following example, we demonstrate the QR factorization of a basis matrix.\n",
+    "The representation is similar to LAPACK's [`dgeqrf`](https://www.netlib.org/lapack/explore-html/dd/d9a/group__double_g_ecomputational_ga3766ea903391b5cf9008132f7440ec7b.html#ga3766ea903391b5cf9008132f7440ec7b), with elementary reflectors in the lower triangular block, scaled by `tau`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "qr =\n",
-      " -2.00000000\n",
-      " -3.00000000\n",
-      " -2.00000000\n",
-      "  0.33333333\n",
-      " -5.00000000\n",
-      "  2.00000000\n",
-      "  0.33333333\n",
-      "  0.40000000\n",
-      " -4.00000000\n",
-      "  0.33333333\n",
-      " -0.20000000\n",
-      " -0.50000000\n",
-      "tau =\n",
-      "  1.50000000\n",
-      "  1.66666667\n",
-      "  1.60000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "qr = np.array([1, -1, 4, 1, 4, -2, 1, 4, 2, 1, -1, 0], dtype=\"float64\")\n",
     "tau = np.empty(3, dtype=\"float64\")\n",
@@ -404,16 +340,10 @@
     "qr, tau = libceed.Basis.qr_factorization(ceed, qr, tau, 4, 3)\n",
     "\n",
     "print('qr =')\n",
-    "for i in range(len(qr)):\n",
-    "  if qr[i] <= 1E-14  and qr[i] >= -1E-14:\n",
-    "    qr[i] = 0\n",
-    "  print('%12.8f'%qr[i])\n",
+    "print(qr.reshape(4, 3))\n",
     "\n",
     "print('tau =')\n",
-    "for i in range(len(tau)):\n",
-    "  if tau[i] <= 1E-14  and tau[i] >= -1E-14:\n",
-    "    tau[i] = 0\n",
-    "  print('%12.8f'%tau[i])"
+    "print(tau)"
    ]
   },
   {
@@ -425,38 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Q =\n",
-      "  0.69153918\n",
-      " -0.70710678\n",
-      "  0.14755868\n",
-      "  0.00004347\n",
-      " -0.14721060\n",
-      "  0.00047835\n",
-      "  0.69240821\n",
-      " -0.70632831\n",
-      "  0.14790715\n",
-      "  0.00047882\n",
-      " -0.69066919\n",
-      " -0.70788369\n",
-      " -0.69153892\n",
-      " -0.70710646\n",
-      " -0.14755804\n",
-      " -0.00100064\n",
-      "lambda =\n",
-      "  0.13487964\n",
-      "  0.23325338\n",
-      "  0.86513545\n",
-      "  1.16666509\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "A = np.array([0.19996678, 0.0745459, -0.07448852, 0.0332866,\n",
     "              0.0745459, 1., 0.16666509, -0.07448852,\n",
@@ -488,38 +389,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x =\n",
-      "  1.68928908\n",
-      "  0.84673819\n",
-      "  0.51761264\n",
-      "  1.36958123\n",
-      " -0.64827487\n",
-      "  0.54168848\n",
-      "  0.61211881\n",
-      " -0.23257073\n",
-      "  0.64977850\n",
-      " -0.54084624\n",
-      "  0.61207450\n",
-      " -0.23180307\n",
-      " -1.68991495\n",
-      " -0.84558672\n",
-      "  0.51761799\n",
-      "  1.36951706\n",
-      "lambda =\n",
-      " 42.52259582\n",
-      "  2.46897852\n",
-      "  0.00000001\n",
-      " 15.01838167\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "M = np.array([0.19996678, 0.0745459, -0.07448852, 0.0332866,\n",
     "              0.0745459, 1., 0.16666509, -0.07448852,\n",
@@ -563,9 +435,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
